Updated with designers toolkit content

--- a/content/sass/_alerts.scss
+++ b/content/sass/_alerts.scss
@@ -15,7 +15,7 @@
 // .alert--danger    - Indicates a dangerous or potentially negative action.
 //
 // Markup:
-// <div class="alert {$modifiers}">This is an alert message</div>
+// <div class="alert {$modifiers}">This is an alert message with a <a href="#">link</a></div>
 //
 // Styleguide 2.1
 
