--- a/content/sass/_header.scss
+++ b/content/sass/_header.scss
@@ -1,31 +1,50 @@
-.masthead {
-	@include respond-min(48em) {
+.masthead {	
+	background-color:#fff;
+	min-height:rem(72px);
+	@include respond-min($medium) {
+		min-height:0;
 		margin:0 auto;
-		padding:lh(.33) 0 0 0;
 		position:relative;
 		width:100%;
+		.wrap {
+			height:rem(72px);
+			margin-bottom:lh(1);
+			}
+		
 		}	
+		
 	}
 	
-
+	
 .icon-menu {
 	color:$bright-blue;
 	}
 		
 		
+.site-logo {
+	display:block;
+	margin-bottom:lh(.33);
+	}
+
 .site-logo__img {
 	display:block;
-	height:50px !important;
-	margin:lh(.25) 0 lh(.5) 0;
+	height:31px !important;
 	width:143px !important;
 	
-	@include respond-min(48em) {
-		height:78px !important;
-		margin:lh(.25) 0 0 0;
-		width:220px !important;
+	@include respond-min($medium) {
+		height:55px !important;
+		margin:0;
+		width:240px !important;
+		}
+		
+	@include respond-min($large) {
+		bottom:0;
+		position:absolute;
+		left:0;
+		margin-bottom:0;
 		}
 	
-	/** @include respond-min(60em) {
+	/** @include respond-min($large) {
 		height:rem(108px) !important;
 		margin:rem(30px) 0 0 0;
 		width:rem(320px) !important;
@@ -33,23 +52,18 @@
 		
 	}
 	
-
-.site-logo--fixed {
-	display:block;
-	height:60px !important;
-	width:171px !important;
-	}
-	
-	
 .tagline {
 	color:$bright-blue;
 	font-size:rem(16px);
-	@include respond-min(60em) {
-		font-size:rem(32px);
-		margin-top:rem(25px);
+	@include respond-min($large) {
+		bottom:0;
+		font-size:rem(26px);
+		position:absolute;
+		right:0;
 		text-align:right;
 		}
 	}
+	
 	
 	
 .js-scroll-offset {
@@ -66,11 +80,11 @@
 	top:lh(.75);
 	z-index:9;
 
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		right:rem(72px);
 		}
 
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		display:none;
 		}
 		
@@ -85,7 +99,7 @@
 		color:$bright-blue;
 		}
 		
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		font-size:rem(42px);
 		}
 		
@@ -94,7 +108,7 @@
 			
 .js-trigger__search {
 	display:block;
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		display:none !important;
 		}
 	
@@ -102,17 +116,17 @@
 	
 .js-panel__search {
 	display:none;
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		display:block !important;
 		}
 	
 	}
 		
 .panel--search {
-	padding:lh(.66) 3% 0 3%;
-	@include respond-min(48em) {
+	padding:lh(.66) 0;
+	@include respond-min($medium) {
 		margin:0;
-		padding:lh(1) 0 0 0;
+		padding:rem(25px) 0 0 0;
 		width:100%;
 		}
 	}
@@ -125,39 +139,76 @@
 	@include visuallyhidden;
 	}
 	
+	
 .search input[type="text"] {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	border:1px solid $light-grey-2;
+	background-color:transparent;
+	border:none;
+	border-bottom:4px solid $bright-blue;
 	box-sizing: border-box; 
+	color:$dark-blue;
 	display:block;
+	font-family:$primary-font;
 	font-size:rem(16px);
-	padding: lh(.5) lh(4) lh(.5) lh(.5);
+	padding: lh(.5) lh(4) lh(.5) 0;
 	position: relative;
 	width:100%;
 	z-index:1;
+	
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	
+	&:focus {
+		-webkit-box-shadow: 0 0 0 $bright-blue;
+		-moz-box-shadow: 0 0 0 $bright-blue;
+		box-shadow: 0 0 0 $bright-blue;
+		}
+		
+	@include respond-min($medium){
+		font-size:rem(36px);
+		padding: lh(1) lh(4) lh(1) 0;
+		}
+		
+	@include respond-min($large){
+		font-size:rem(48px);
+		}
+
+	@include respond-min($large){
+		font-size:rem(72px);
+		}
+		
 	}
 	
 .search__btn {
 	@include border-radius(0);
-	background-color:$light-grey-2;
+	background-color:transparent;
 	bottom: 0;
-	color:$mid-grey-2;
+	color:$bright-blue;
 	cursor: pointer;
 	margin:0;
-	padding: lh(.5) lh(.75);
+	padding:lh(.5) lh(.66) 0 lh(.66);
 	position: absolute;
 	right: 0;
 	top: 0;
 	z-index: 1;
-	&:hover {
-		background-color:$light-grey-3;
-		color:$dark-grey-1;
-		}
 	
 	&:hover {
-		background-color:darken($primary-color, 10%);
-		color:#fff;
+		color:$dark-blue;
+		}
+		
+	@include respond-min($medium){
+		font-size:rem(36px);
+		padding:lh(1.25) lh(1) 0 lh(1);
+		}
+		
+	@include respond-min($large){
+		font-size:rem(48px);
+		padding-top:lh(1.5);
+		}
+		
+	@include respond-min($large){
+		font-size:rem(72px);
 		}
 		
 	}
