--- a/content/webfonts/fontello/css/fontello-codes.css
+++ b/content/webfonts/fontello/css/fontello-codes.css
@@ -43,3 +43,4 @@
 .icon-gplus:before { content: '\e829'; } /* '' */
 .icon-play:before { content: '\e82a'; } /* '' */
 .icon-angle-down:before { content: '\e82b'; } /* '' */
+.icon-cancel-1:before { content: '\e82c'; } /* '' */
