--- a/content/sass/_accordion.scss
+++ b/content/sass/_accordion.scss
@@ -165,7 +165,7 @@
 		@include visuallyhidden;
 		}
 		
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		color:$mid-grey-3;
 		font-family:georgia;
 		font-size:em(12px);
@@ -178,7 +178,7 @@
 	}
 	
 .collapse__content {	
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		padding-left:lh(1.33);
 		}
 
