--- a/content/sass/_flexslider.scss
+++ b/content/sass/_flexslider.scss
@@ -295,12 +295,12 @@ html[xmlns] .slides {
 	margin: 0 auto lh(2) auto; 
 	text-align:left;
 	
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		height:rem(400px);
 		margin:0;
 		}
 
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		background-image:url(../images/branding/sl-pattern-01.png);
 		background-position:right top;
 		background-repeat:no-repeat;
@@ -317,7 +317,7 @@ html[xmlns] .slides {
 	margin-right:auto;
 	width: 94%;
 	
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		bottom:lh(4);
 		left:0;
 		max-width: 1152px;
@@ -325,7 +325,7 @@ html[xmlns] .slides {
 		width:100%;
 		}
 		
-	@include respond-min(90em) {
+	@include respond-min($xlarge) {
 		max-width: 1400px;
 		}
 
@@ -337,11 +337,11 @@ html[xmlns] .slides {
 	overflow:hidden;
 	padding-bottom:lh(2);
 	
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		height:rem(480px);
 		}
 		
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		z-index:100;
 		}
 			
@@ -354,18 +354,18 @@ html[xmlns] .slides {
 	max-width:1400px;
 	width:94%;
 	
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		padding-left:lh(4);
 		padding-right:lh(4);
 		}
 	
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		position:relative;
 		z-index:2;
 		width:100%;
 		}
 		
-	@include respond-min(90em) {
+	@include respond-min($xlarge) {
 		padding-left:lh(0);
 		padding-right:lh(0);
 		}		
@@ -377,7 +377,7 @@ html[xmlns] .slides {
 	}
 	
 .flexslider--hero .flex-caption  {
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		padding:lh(2) 0 0 0;
 		}
 	}
@@ -389,7 +389,7 @@ html[xmlns] .slides {
 	letter-spacing:5px;
 	text-transform:uppercase;
 	margin:0;		
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		font-size:rem(14px);
 		letter-spacing:5px;
 		margin-top:lh(3);
@@ -404,11 +404,11 @@ html[xmlns] .slides {
 	line-height:1;
 	margin-top:lh(1);
 	
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		font-size:rem(48px); 
 		}
 		
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		font-size:rem(52px);
 		margin-top:lh(1.25); 
 		}
@@ -424,15 +424,15 @@ html[xmlns] .slides {
 	line-height:lh(.75);
 	margin-bottom:lh(1);
 
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		font-size:rem(16px);
 		}
 
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		max-width:48%;
 		}
 		
-	@include respond-min(90em) {
+	@include respond-min($xlarge) {
 		font-size:rem(18px);
 		line-height:lh(1);
 		}
