--- a/content/sass/_grid.scss
+++ b/content/sass/_grid.scss
@@ -217,11 +217,7 @@ body {
 	
 @mixin column($x,$columns:$columns) {
 	width: $total-width*(((($gutter-width+$column-width)*$x)-$gutter-width) / gridsystem-width($columns));
-	margin-left: $total-width*(($gutter-width*.5)/gridsystem-width($columns));
-	margin-right: $total-width*(($gutter-width*.5)/gridsystem-width($columns));
 	// *width: $total-width*(((($gutter-width+$column-width)*$x)-$gutter-width) / gridsystem-width($columns))-$correction;
-	// *margin-left: 0 $total-width*(($gutter-width*.5)/gridsystem-width($columns))-$correction;
-	// *margin-right: 0 $total-width*(($gutter-width*.5)/gridsystem-width($columns))-$correction;
 	}
 		
 @mixin push($offset:1) {
@@ -244,21 +240,21 @@ $total-width: 100%;
 
 $medium:48em;
 $large:60em;
-$xlarge:90em;
+$xlarge:90.075em;
+
 
 
 /* GRID - CLASSES
 ------------------------------------------------*/
 
-.col {
-	@include respond-max(48em) {
-		display: block;
-		width:100%;
-		}
-				
-	display: inline;
+.col {	
 	float: left;
 	margin-bottom:lh(1);
+	margin-left: $total-width*(($gutter-width*.5)/gridsystem-width($columns));
+	margin-right: $total-width*(($gutter-width*.5)/gridsystem-width($columns));
+	// *width: $total-width*(((($gutter-width+$column-width)*$x)-$gutter-width) / gridsystem-width($columns))-$correction;
+	// *margin-left: 0 $total-width*(($gutter-width*.5)/gridsystem-width($columns))-$correction;
+	// *margin-right: 0 $total-width*(($gutter-width*.5)/gridsystem-width($columns))-$correction;
 	}
 
 .small_1 {	
@@ -588,24 +584,6 @@ $xlarge:90em;
 		
 .row {
 	@include clearfix();
-	@include respond-min($medium) {
-		@include row;
-		}
-	}
-	
-.row--equal-height {
-	.col {
-		display:block;
-		
-		@include respond-min(48em) {
-			min-height:rem(220px);
-			}
-		
-		@include respond-min(60em) {
-			
-			}
-			
-		}
-		
+	@include row;
 	}
 	
