--- a/content/sass/_images.scss
+++ b/content/sass/_images.scss
@@ -35,10 +35,10 @@
 // <figure class="relative">
 // 	<img alt="Example image" src="http://placehold.it/1500x900/666666/cccccc">
 // 	<figcaption class="panel--img-overlay">
-// 		<h4 class="primary-font giga dark-blue">Diversifying by investment style</h4>
+// 		<h4 class="primary-font giga dark-blue push-half--bottom">Diversifying by investment style</h4>
 // 		<p class="primary-font alpha bright-blue">This summer, Standard Life Mutual Funds (SLMF) made several additions to its mutual fund line-up.</p>
-//      <p class="beta">We welcomed portfolio managers Beutel, Goodman &amp; Company Ltd. and Guardian Capital LP, which added two new investment styles to our offering: value, and growth at a reasonable price (GARP). This complements the unique Focus on Change philosophy of our premier portfolio manager — Standard Life Investments.</p>
-//      <a href="#" class="btn btn--orange btn--icon">Example button <i class="icon icon-angle-right"></i></a>
+//      <p class="beta">We welcomed portfolio managers Beutel, Goodman &amp; Company Ltd. and Guardian Capital LP, which added two new investment styles to our offering: value, and growth at a reasonable price (GARP).</p>
+//      <a href="#" class="btn btn--orange btn--small">Example button <i class="icon icon-angle-right"></i></a>
 // 	</figcaption>
 // </figure>
 //
@@ -164,7 +164,7 @@
 	height:100%;
 	padding:lh(1);
 	
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		background-color: rgba(255,255,255,0.85);
 		bottom:lh(1);
 		height:auto;
