--- a/content/sass/_panels.scss
+++ b/content/sass/_panels.scss
@@ -12,14 +12,14 @@
 	}
 	
 .panel--xdeep {
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		display:block;
 		padding:lh(1.33) lh(3);
 		}
 	}
 		
 .panel--medium {
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		background-color:transparent;
 		display:block;
 		margin-bottom:lh(.75);
@@ -29,7 +29,7 @@
 	}
 	
 .panel--large {
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		background-color:transparent;
 		display:block;
 		margin-bottom:lh(1);
@@ -50,7 +50,7 @@
 
 .panel--desktop {
 	padding:0;
-	@include respond-min(60em) {
+	@include respond-min($large) {
 		padding:lh(.66);
 		}
 	}
@@ -84,15 +84,38 @@
 	}
 	
 .circle--medium {
-	height:lh(3.66);
-	line-height:lh(3.66);		
-	width:lh(3.66);	
-	}
+	height:rem(48px);
+	line-height:rem(48px);
+	width:rem(48px);
 	
+	@include respond-min($large)  {
+		height:rem(60px);
+		line-height:rem(60px);
+		width:rem(60px);
+		}
+		
+	@include respond-min($xlarge)  {
+		height:rem(72px);
+		line-height:rem(72px);
+		width:rem(72px);
+		}	
+		
+	}
+		
 .circle--large {
 	height:rem(120px);
 	line-height:rem(120px);
 	width:rem(120px);
+	}
+	
+.circle--text {	
+	border-radius: 50%;
+	display: block;
+	font-size: 2.625rem;
+	height: 5.49rem;
+	line-height: 5.49rem;
+	text-align: center;
+	width: 5.49rem;
 	}
 	
 .panel--flush {
