--- a/content/sass/_tables.scss
+++ b/content/sass/_tables.scss
@@ -2,7 +2,7 @@
 //
 // Styleguide 16.0
 
-// Tables
+// Default Table
 //
 // For basic styling—light padding and only horizontal dividers—add the base class `.table` to any `<table>`.
 //
@@ -59,7 +59,7 @@
 	margin:0 0 lh(1) 0;
 	width:100%;
 	
-	@include respond-min(48em) {
+	@include respond-min($medium) {
 		line-height:lh(1);
 		}
 		
