--- a/content/webfonts/fontello/css/fontello.css
+++ b/content/webfonts/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?33408136');
-  src: url('../font/fontello.eot?33408136#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?33408136') format('woff'),
-       url('../font/fontello.ttf?33408136') format('truetype'),
-       url('../font/fontello.svg?33408136#fontello') format('svg');
+  src: url('../font/fontello.eot?41030714');
+  src: url('../font/fontello.eot?41030714#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?41030714') format('woff'),
+       url('../font/fontello.ttf?41030714') format('truetype'),
+       url('../font/fontello.svg?41030714#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?33408136#fontello') format('svg');
+    src: url('../font/fontello.svg?41030714#fontello') format('svg');
   }
 }
 */
@@ -94,3 +94,4 @@
 .icon-gplus:before { content: '\e829'; } /* '' */
 .icon-play:before { content: '\e82a'; } /* '' */
 .icon-angle-down:before { content: '\e82b'; } /* '' */
+.icon-cancel-1:before { content: '\e82c'; } /* '' */
