--- a/content/sass/_audioplayer.scss
+++ b/content/sass/_audioplayer.scss
@@ -1,6 +1,7 @@
 // Audio
 //
 // HTML5 Audio player
+// http://osvaldas.info/audio-player-responsive-and-touch-friendly
 //
 //
 //Markup:
@@ -14,7 +15,7 @@
 //      <source src="../content/audio/BlueDucks_FourFlossFiveSix.ogg">
 //      <source src="../content/audio/BlueDucks_FourFlossFiveSix.wav">
 //    </audio>    
-//  <a class="btn btn--small btn--icon push--ends" title="Right click and choose Save link as..." href="https://d97i5tfmntrq8.cloudfront.net/d3f61fe0-d2e5-00a6-ae4c-9dbe00f4eefb/Jonah-Lehrer-Final-Edit-MONO-CAT.mp3">
+//  <a class="btn btn--small btn--icon push--ends" title="Right click and choose Save link as..." href="#">
 //    <i class="icon icon-download"></i> 
 //    Download Audio File
 //  </a> 
